<resources>
    <string name="app_name">DunDun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_title_id">이메일</string>
    <string name="signup_hint_id">이메일을 입력해주세요!</string>
    <string name="signup_title_name">닉네임</string>
    <string name="signup_hint_name">8글자 이내 한글 혹은 영문</string>
    <string name="signup_title_pw">비밀번호</string>
    <string name="sign_hint_pw">8~20자리 영대-소문자, 숫자 조합</string>
    <string name="sign_title_pwrepeat">비밀번호 재확인</string>
    <string name="signup_hint_pwrepeat">비밀번호를 재입력해주세요!</string>
    <string name="signup_id_error_duplicate">이미 존재하는 이메일입니다.</string>
    <string name="signup_id_error_total">서버에 문제가 발생했어요 :(</string>
    <string name="signup_id_correct">사용 가능한 이메일이에요 :)</string>
    <string name="signup_id_error_type">올바른 이메일 형식이 아니에요 :(</string>
    <string name="signup_name_correct">올바른 닉네임입니다 :)</string>
    <string name="signup_name_error_length">이름의 길이가 조건에 맞지 않습니다. :(</string>
    <string name="signup_name_error_type">이름에 들어갈 수 없는 문자가 들어있습니다. :(</string>
    <string name="signup_pw_correct">올바른 비밀번호입니다. :)</string>
    <string name="signup_pw_error_length">길이가 조건에 맞지 않습니다 :(</string>
    <string name="signup_pw_error_type">들어갈 수 없는 문자가 들어가 있습니다. :(</string>
    <string name="signup_pwrepeat_correct">일치합니다. :)</string>
    <string name="signup_pwrepeat_error_type">일치하지 않습니다. :(</string>
    <string name="signin_welcome_text">둔둔에 어서오세요!</string>
    <string name="signin_hint_id">ID</string>
    <string name="signin_hint_pw">PASSWORD</string>
    <string name="signin_login_text">Login</string>
    <string name="sign_select_welcome_text">Welcome to DunDun\n\nChose Your Type</string>
    <string name="sign_select_sign_in_text">Login</string>
    <string name="sign_select_sign_up_text">Sign up</string>
    <string name="type_select_user_text">User</string>
    <string name="type_select_artist_text">Artist</string>
    <string name="signup_submit_text">Sign up</string>

    <string name="map_permission_request_test">현재 위치를 확인하시려면 위치 권한을 허용해주세요.</string>
    <string name="map_refresh_text">이 지역 탐색하기!</string>

</resources>