<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.signselect.TypeSelectFragment">

    <TextView
        android:id="@+id/txt_sign_select_welcome"
        style="@style/Text_title_medium_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_select_welcome_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_select_artist"
        style="@style/Text_body_large_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sign_select_side_margin"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="@dimen/sign_select_side_margin"
        android:background="@drawable/sign_select_shape"
        android:padding="16dp"
        android:text="@string/type_select_artist_text"
        android:textAllCaps="false"
        android:textColor="@color/base_reverse_font_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sign_select_welcome" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_select_user"
        style="@style/Text_body_large_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sign_select_side_margin"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="@dimen/sign_select_side_margin"
        android:layout_marginBottom="140dp"
        android:background="@drawable/sign_select_shape"
        android:backgroundTint="@color/select_sub_color"
        android:padding="16dp"
        android:text="@string/type_select_user_text"
        android:textAllCaps="false"
        android:textColor="@color/base_reverse_font_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_select_artist" />

</androidx.constraintlayout.widget.ConstraintLayout>