<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.signup.SignUpFragment">

    <TextView
        android:id="@+id/txt_signup_idtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/signup_title_side_margin"
        android:text="@string/signup_title_id"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittxt_signup_id"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/signup_side_margin"
        android:layout_marginTop="@dimen/base_base_margin"
        android:layout_marginEnd="@dimen/signup_side_margin"
        android:background="@drawable/signup_textfield_shape"
        android:hint="@string/signup_hint_id"
        android:padding="@dimen/signup_textfield_padding"
        android:textColorHint="@color/signup_textfield_hint_color"
        android:textSize="@dimen/signup_textfield_textsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_signup_idtitle" />

    <CheckBox
        android:id="@+id/checkbox_signup_id"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="@dimen/base_base_margin"
        android:background="@drawable/signup_icon_selector"
        android:button="@null"
        android:checked="true"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="@+id/edittxt_signup_id"
        app:layout_constraintTop_toBottomOf="@+id/edittxt_signup_id" />

    <TextView
        android:id="@+id/txt_signup_idstate"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="@dimen/base_base_margin"
        android:gravity="center"
        android:textColor="@color/signup_textfield_color"
        android:textSize="@dimen/signup_textfield_textsize"
        app:layout_constraintStart_toEndOf="@+id/checkbox_signup_id"
        app:layout_constraintTop_toBottomOf="@+id/edittxt_signup_id" />

    <TextView
        android:id="@+id/txt_signup_nametitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/signup_title_side_margin"
        android:layout_marginTop="@dimen/signup_area_margin"
        android:text="@string/signup_title_name"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_signup_idtitle" />

    <EditText
        android:id="@+id/edittxt_signup_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/signup_side_margin"
        android:layout_marginTop="@dimen/base_base_margin"
        android:layout_marginEnd="@dimen/signup_side_margin"
        android:background="@drawable/signup_textfield_shape"
        android:hint="@string/signup_hint_name"
        android:padding="@dimen/signup_textfield_padding"
        android:textColorHint="@color/signup_textfield_hint_color"
        android:textSize="@dimen/signup_textfield_textsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_signup_nametitle" />

    <CheckBox
        android:id="@+id/checkbox_signup_name"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="@dimen/base_base_margin"
        android:background="@drawable/signup_icon_selector"
        android:button="@null"
        android:checked="true"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="@+id/edittxt_signup_name"
        app:layout_constraintTop_toBottomOf="@+id/edittxt_signup_name" />

    <TextView
        android:id="@+id/txt_signup_namestate"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="@dimen/base_base_margin"
        android:gravity="center"
        android:textColor="@color/signup_textfield_color"
        android:textSize="@dimen/signup_textfield_textsize"
        app:layout_constraintStart_toEndOf="@+id/checkbox_signup_name"
        app:layout_constraintTop_toBottomOf="@+id/edittxt_signup_name" />

    <TextView
        android:id="@+id/txt_signup_pwtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/signup_title_side_margin"
        android:layout_marginTop="@dimen/signup_area_margin"
        android:text="@string/signup_title_pw"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_signup_nametitle" />

    <EditText
        android:id="@+id/edittxt_signup_pw"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/signup_side_margin"
        android:layout_marginTop="@dimen/base_base_margin"
        android:layout_marginEnd="@dimen/signup_side_margin"
        android:background="@drawable/signup_textfield_shape"
        android:hint="@string/sign_hint_pw"
        android:padding="@dimen/signup_textfield_padding"
        android:textColorHint="@color/signup_textfield_hint_color"
        android:textSize="@dimen/signup_textfield_textsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_signup_pwtitle" />

    <CheckBox
        android:id="@+id/checkbox_signup_pw"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="@dimen/base_base_margin"
        android:background="@drawable/signup_icon_selector"
        android:button="@null"
        android:checked="true"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="@+id/edittxt_signup_pw"
        app:layout_constraintTop_toBottomOf="@+id/edittxt_signup_pw" />

    <TextView
        android:id="@+id/txt_signup_pwstate"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="@dimen/base_base_margin"
        android:gravity="center"
        android:textColor="@color/signup_textfield_color"
        android:textSize="@dimen/signup_textfield_textsize"
        app:layout_constraintStart_toEndOf="@+id/checkbox_signup_pw"
        app:layout_constraintTop_toBottomOf="@+id/edittxt_signup_pw" />

    <TextView
        android:id="@+id/txt_signup_pwrepeattitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/signup_title_side_margin"
        android:layout_marginTop="@dimen/signup_area_margin"
        android:text="@string/sign_title_pwrepeat"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_signup_pwtitle" />

    <EditText
        android:id="@+id/edittxt_signup_pwrepeat"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/signup_side_margin"
        android:layout_marginTop="@dimen/base_base_margin"
        android:layout_marginEnd="@dimen/signup_side_margin"
        android:background="@drawable/signup_textfield_shape"
        android:hint="@string/signup_hint_pwrepeat"
        android:padding="@dimen/signup_textfield_padding"
        android:textColorHint="@color/signup_textfield_hint_color"
        android:textSize="@dimen/signup_textfield_textsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_signup_pwrepeattitle" />

    <CheckBox
        android:id="@+id/checkbox_signup_pwrepeat"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="@dimen/base_base_margin"
        android:background="@drawable/signup_icon_selector"
        android:button="@null"
        android:checked="true"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="@+id/edittxt_signup_pwrepeat"
        app:layout_constraintTop_toBottomOf="@+id/edittxt_signup_pwrepeat" />

    <TextView
        android:id="@+id/txt_signup_pwrepeatstate"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="@dimen/base_base_margin"
        android:gravity="center"
        android:textColor="@color/signup_textfield_color"
        android:textSize="@dimen/signup_textfield_textsize"
        app:layout_constraintStart_toEndOf="@+id/checkbox_signup_pwrepeat"
        app:layout_constraintTop_toBottomOf="@+id/edittxt_signup_pwrepeat" />
</androidx.constraintlayout.widget.ConstraintLayout>